@@ -1,3 +1,12 @@
+Thu Aug 12 14:17:14 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>
+
+	* MNI/Batch.pm (_batch_optstring): fixed 'shell' option; forgot to
+ 	lowercase it when making the previous changes.
+
+Wed Aug 11 19:46:41 1999  Steve ROBBINS  <stever@bic.mni.mcgill.ca>
+
+	* MNI/Batch.pm: don't lexically scope ProgramName.
+
 Sun Aug  8 17:11:58 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>
 
 	* MNI/Batch.pm (create_sync_file): take care when job_name is not
